# Swarm-Simulator

./: .gitignore  README.md  a.txt  b.txt  create_map.sh  map.sh  save_map.sh
Experiment_bag_data/: 需要解决的问题.md
devel/: .catkin  local_setup.sh
devel/include/bspline_race/: BsplineTraj.h
devel/lib/bspline_race/: flag_planner
devel/lib/dynamic_env_generator/: dynamic_env_generator
devel/lib/grid_path_searcher/: astar_node  test
devel/lib/local_sensing_node/: pcl_render_node
devel/lib/multi_map_server/: multi_map_visualization
devel/lib/odom_visualization/: odom_visualization
devel/lib/pkgconfig/: bspline_race.pc  cmake_utils.pc  dynamic_env_generator.pc  grid_path_searcher.pc  local_sensing_node.pc  map_generator.pc  mapping.pc  mockamap.pc  multi_map_server.pc  odom_visualization.pc  pose_utils.pc  quadrotor_msgs.pc  rviz_plugins.pc  so3_control.pc  so3_quadrotor_simulator.pc  uav_utils.pc  waypoint_generator.pc
devel/lib/so3_control/: control_bspline  control_example
devel/lib/so3_quadrotor_simulator/: quadrotor_simulator_so3
devel/lib/waypoint_generator/: waypoint_generator
devel/share/bspline_race/cmake/: bspline_race-msg-extras.cmake  bspline_race-msg-paths.cmake  bspline_raceConfig.cmake
devel/share/cmake_utils/cmake/: cmake_utilsConfig.cmake
devel/share/dynamic_env_generator/cmake/: dynamic_env_generatorConfig.cmake
devel/share/grid_path_searcher/cmake/: grid_path_searcherConfig.cmake
devel/share/local_sensing_node/cmake/: local_sensing_nodeConfig.cmake
sh/: multi_quadrotor_simulator.sh  test_sph.sh  test_without_sph.sh
src/bspline_traj/: CMakeLists.txt  package.xml
src/bspline_traj/config/: particle0_20241207_174932.txt  particle0_20241207_175145.txt  particle0_20241207_175217.txt  particle0_20241208_154424.txt  particle0_20241208_154539.txt  particle0_20241208_155748.txt  traj_0.txt  waypoint.txt
src/bspline_traj/include/bspline_race/: UniformBspline.h  bspline_opt.h  bspline_race.h  swarm_planning.h
src/bspline_traj/msg/: BsplineTraj.msg
src/bspline_traj/src/: UniformBspline.cpp  bspline_opt.cpp  bspline_race.cpp  swarm_planning.cpp  test_planning.cpp  traj_server.cpp
src/common_msgs/: CMakeLists.txt
src/common_msgs/msg/: Acceleration.msg  BsplineTraj.msg  Force.msg  Odom.msg  OdomWithNeighbors.msg  Particle.msg  Position.msg  Swarm_particles.msg
src/path_searching/: CMakeLists.txt
src/path_searching/src/: astar.cpp  kinodynamic_astar.cpp
src/plan_env/: CMakeLists.txt
src/plan_env/src/: edt_environment.cpp  sdf_map.cpp
src/swarm_planner/bspline_traj/: CMakeLists.txt  package.xml  send_traj_with_password.sh
src/swarm_planner/bspline_traj/include/bspline_race/: UniformBspline.h  UniformBspline_3d.h  bspline_opt.h  bspline_race.h  bspline_race_3d.h  formation_planning.h  gvf.h  gvf_manager.h  swarm_planning_3d.h
src/swarm_planner/bspline_traj/launch/: planning.launch  test_gvf.launch
src/swarm_planner/bspline_traj/scripts/: vf_pf_demo.py
src/swarm_planner/bspline_traj/src/: UniformBspline_3d.cpp  bspline_opt.cpp  bspline_opt_3d.cpp  bspline_race_3d.cpp  formation_planning.cpp  gvf.cpp  gvf_manager.cpp  swarm_planning.cpp  swarm_planning_3d.cpp  test_planning.cpp  traj_saver.cpp
src/swarm_planner/bspline_traj/traj/2025_04_15_20_31/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
src/swarm_planner/bspline_traj/traj/2025_04_15_20_44/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
src/swarm_planner/bspline_traj/traj/2025_04_15_21_35/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
src/swarm_planner/bspline_traj/traj/test/: 6.txt
src/swarm_planner/common_msgs/: CMakeLists.txt  package.xml
src/swarm_planner/common_msgs/msg/: Swarm_traj.msg  Velocity.msg
src/swarm_planner/path_searching/: CMakeLists.txt  package.xml
src/swarm_planner/plan_env/: CMakeLists.txt  package.xml
src/swarm_planner/water_swarm/: CMakeLists.txt  package.xml
src/swarm_planner/water_swarm/include/water_swarm/: formation_grad.h  sph_particles.h  sph_tase.h  sph_visulization.h  sph_zhang.h  sph_zhang_3d.h
src/swarm_planner/water_swarm/launch/: compare.launch  random_map_simulator.launch  simulator.launch  single_particle.launch  sph_experiment_3d.launch  sph_free.launch  sph_zhang.launch  sph_zhang_3d.launch
src/swarm_planner/water_swarm/launch/2025TASE/: formation.launch  sph_tase.launch
src/swarm_planner/water_swarm/src/: EdtTransform.cpp  formation_grad.cpp  self_organize.cpp  sph_tase.cpp  sph_vis.cpp  sph_visulization.cpp  sph_zhang.cpp  sph_zhang_3d.cpp
src/uav_simulator/Utils/odom_visualization/: CMakeLists.txt
src/uav_simulator/Utils/odom_visualization/src/: camera_tf_broadcaster.cpp  odom_visualization.cpp
src/uav_simulator/Utils/target_publisher/: CMakeLists.txt  package.xml
src/uav_simulator/Utils/target_publisher/src/: publish_target.cpp  publish_target.ui
src/uav_simulator/dynamic_map_generator/: CMakeLists.txt  package.xml
src/uav_simulator/dynamic_map_generator/launch/: draw_map.launch  draw_map_3d.launch
src/uav_simulator/dynamic_map_generator/resource/: compare_corridor.pcd  demoalg.pcd  door1.pcd  door2.pcd  door3.pcd  experiment.pcd  narrow.pcd  tase.pcd  tase_test.pcd  test_sparse.pcd  tmp.pcd
src/uav_simulator/dynamic_map_generator/src/: click_map.cpp  click_map_3d.cpp  click_map_dynamic.cpp  dyn_map.cpp  exp_map.cpp  local_dyn_map.cpp  local_sensing.cpp  map2bt.cpp  map_publisher.cpp  move_base_goal_pub.cpp  random_forest_sensing.cpp  random_map.cpp  static_dyn_map.cpp
src/uav_simulator/map_generator/: CMakeLists.txt  package.xml
src/water_swarm/: CMakeLists.txt  package.xml
src/water_swarm/include/water_swarm/: neighbors.h  sph.h  sph_particles.h  sph_zhang.h
src/water_swarm/launch/: neighbors.launch  sph_door.launch  sph_experiment.launch  sph_free.launch  sph_particles.launch  sph_planner.launch  sph_zhang.launch  vissph.launch
src/water_swarm/msg/: OdomBroadcast.msg  OdomWithNeighbors.msg
src/water_swarm/src/: neighbors.cpp  sph.cpp  sph_particles.cpp  sph_vis.cpp  sph_zhang.cpp
(+48 files in other folders)
