<?xml version="1.0"?>
<package format="2">
  <name>target_publisher</name>
  <version>0.0.0</version>
  <description>The target_publisher package</description>


  <maintainer email="ruochengli@bit.edu.cn">uav</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

<build_depend>qtbase5-dev</build_depend>
<exec_depend>qtbase5-dev</exec_depend>
<build_depend>rqt_gui_cpp</build_depend>
<exec_depend>rqt_gui_cpp</exec_depend>
<exec_depend>geometry_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
